2006-06-27 Sandro Santilli <strk@refractions.net>

	* source/algorithm/HCoordinate.cpp: added
	support for MingW -ansi builds.
	* capi/geos_c.cpp: fixed forward declaration
	of GEOSCoordSeq_getOrdinate.
	* capi/geos_c.h.in: renamed GEOSGeomTypeId
	enum to GEOSGeomTypes, to make VC++ 2005 happy.

2006-06-19 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/CoordinateFilter.h,
	source/headers/geos/noding/ScaledNoder.h,
	source/headers/geos/util/CoordinateArrayFilter.h,
	source/headers/geos/util/UniqueCoordinateArrayFilter.h,
	source/noding/ScaledNoder.cpp: don't *require*
	CoordinateFilters to define both read-only and read-write
	methods.
	* source/geom/Polygon.cpp: optimized loops.
	* geom::GeometryFactory (cpp,h,inl): port info and doxygen dox.
	* geom::util::GeometryTransformer (cpp,h): updated port info.
	* tests/xmltester/XMLTester.cpp: tolerate invalid inputs.

2006-06-14 Sandro Santilli <strk@refractions.net>

	* source/geom/Coordinate.cpp, source/headers/geos/geom/Coordinate.h,
	source/headers/geos/geom/Coordinate.inl: let the compiler
	synthetize copy ctor and assignment op for Coordinate class
	to obtain better numerical stability.
	* tests/xmltester/XMLTester.cpp: added support
	for AreaTest ops.
	* source/operation/overlay/OverlayOp.cpp: use
	NodeMap::container and related typedefs, removed
	(int) casts, optimized loops.
	* source/geomgraph/EdgeEnd.cpp,
	source/headers/geos/geomgraph/DirectedEdge.h,
	source/headers/geos/geomgraph/DirectedEdge.inl,
	source/headers/geos/geomgraph/EdgeEnd.h:
	EdgeEnd::getEdge() made non-virtual and inlined.
	* source/operation/overlay/PolygonBuilder.cpp: fixed
	bug in placePolygonHoles and findShell (and actually improved
	performance of them).

2006-06-13 Sandro Santilli <strk@refractions.net>

	* operation::overlay::PolygonBuilder: cleanups.
	* source/headers/geos/io/WKTReader.inl: added missing include
	for GEOS_DEBUG set case, use stderr for debugging output.